--- a/fam_close.html
+++ b/fam_close.html
@@ -59,14 +59,15 @@
 				<li><a href="fam_put.html">fam_put</a></li>
 				<li><a href="fam_gather.html">fam_gather</a></li>
 				<li><a href="fam_scatter.html">fam_scatter</a></li>
-                                <li><a href="fam_copy.html">fam_copy</a></li>
-                                <li><a href="fam_copy_wait.html">fam_copy_wait</a></li>
+				<li><a href="fam_copy.html">fam_copy</a></li>
+				<li><a href="fam_copy_wait.html">fam_copy_wait</a></li>
                                 <li><a href="fam_backup.html">fam_backup</a></li>
                                 <li><a href="fam_backup_wait.html">fam_backup_wait</a></li>
                                 <li><a href="fam_restore.html">fam_restore</a></li>
                                 <li><a href="fam_restore_wait.html">fam_restore_wait</a></li>
-				<li><a href="fam_delete_backup.html">fam_delete_backup</a></li>
-				<li><a href="fam_delete_backup_wait.html">fam_delete_backup_wait</a></li>
+                                <li><a href="fam_delete_backup.html">fam_delete_backup</a></li>
+                                <li><a href="fam_delete_backup_wait.html">fam_delete_backup_wait</a></li>
+
 			</ul>
 			<hr>
 			Atomics
@@ -103,55 +104,79 @@
 			<hr>
 		</nav>
 		<article>
-			<h1 class="code">openfam::fam::fam_delete_backup_wait</h1>
-	<p>Wait for the delete of backup to be completed.</p>
+			<h1 class="code">openfam::fam::fam_close</h1>
+	<p>Close the descriptor of a data item in FAM.</p>
 	<h2>Synopsis</h2>
-	<p class="code">void fam_delete_backup_wait(void *waitObj);</p>
+	<p class="code">void fam_close(Fam_Descriptor *descriptor);</p>
 	<h2>Description</h2>
-	<p>The method blocks until the backup deletion associated with the wait object is completed.</p>
+	<p>This method reduces the reference count of the region within which the data item represented by the descriptor is allocated. 
+OpenFAM internally use this reference count for optimal usage of resources. 
+Fam_close() helps to release unused resources back to the system.
+	</p>
 	<h2>Input Arguments</h2>
 	<table>
 		<tbody>
-			<tr>
-				<th>
-					Name
-				</th>
-				<td>
-					Description
-				</td>
-			</tr>
-			<tr>
-				<td class="code">
-					waitObj
-				</td>
-				<td>
-					A pointer to the wait object associated with the delete_backup
-						operation
-				</td>
-			</tr>
+			<tr><th>Name</th><th>Description</th></tr>
+			<tr><td class="code">descriptor</td><td>Descriptor associated with the space to deallocate.</td></tr>
 		</tbody>
 	</table>
 	<h2>Return Values</h2>
 	<p>None. Throws <code>Fam_Exception</code> on error.</p>
-	<h2>Fam error numbers</h2>
+	<h2>Fam Error Numbers</h2>
 	<table>
 	<tbody>
 	<tr><th>Error</th><th>Description</th></tr>
-	<tr><td class="code">FAM_ERR_INVALID</td><td>API called with incorrect parameters.</td></tr>
-	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights</td></tr>
-	<tr><td class="code">FAM_ERR_LIBFABRIC</td><td>Libfabric error occurred.</td></tr>
+	<tr><td class="code">FAM_ERR_NOPERM</td><td>Caller does not have access rights.</td></tr>
+	<tr><td class="code">FAM_ERR_NOTFOUND</td><td>Item or region name was not found by the metadata service.</td></tr>
 	<tr><td class="code">FAM_ERR_RPC</td><td>Communication error from grpc layer.</td></tr>
 	<tr><td class="code">FAM_ERR_RPC_CLIENT_NOTFOUND</td><td>RPC service not available.</td></tr>
-	</tbody>
+	<tr><td class="code">FAM_ERR_METADATA</td><td>Metadata service error.</td></tr>
+	<tr><td class="code">FAM_ERR_MEMORY</td><td>Memory service error.</td></tr>
+	<tr><td class="code">FAM_ERR_RESOURCE</td><td>Resource not available.</td></tr>
+</tbody>
 	</table>
 	<h2>Notes</h2>
-	<p>None.</p>
+	<p>There is no explicit open method for a data item descriptor. The reference count of a region is increased when a PE obtains a valid descriptor for a data item belonging to that region (either when data item is allocated or while validating the descriptor in any data path or atomic API call).</p>
 	<h2>Example</h2>
-	<p>See <a href="fam_delete_backup.html#e1">fam_delete_backup</a></p>
+<pre>
+#include &lt;string.h&gt;
+#include &lt;fam/fam.h&gt;
+#include &lt;fam/fam_exception.h&gt;
+using namespace std;
+using namespace openfam;
+
+int main(void) {
+	fam *myFam = new fam();
+	
+	// ... initialization code here
+	
+	try {
+		// get a region descriptor from the metadata service
+		Fam_Region_Descriptor *region = myFam-&gt;fam_lookup_region("myRegion");
+
+                // create 50 element unnamed integer array in FAM with 0600
+		// (read/write by owner) permissions in myRegion
+		Fam_Descriptor *descriptor = myFam-&gt;fam_allocate((uint64_t)(50 * sizeof(int)), 0600, region);
+
+		printf("Successfully allocated 50 unnamed integer elements\n");
+
+		// close the descriptor
+		myFam-&gt;fam_close(descriptor);
+		printf("Successfully closed the data item descriptor\n");
+		
+
+		
+	} catch (Fam_Exception &amp;e) {
+		printf("Fam API failed: %d: %s\n", e.fam_error(), e.fam_error_msg());
+	}
+		
+	// ... Finalization code here
+}
+</pre>
 		</article>
 	</section>
 	<footer>
-		<p>Copyright 2022-23, Hewlett Packard Enterprise Development Co, LLP</p>
+		<p>Copyright 2023, Hewlett Packard Enterprise Development Co, LLP</p>
 	</footer>
 </body>
 </html>
