--- a/release_notes.html
+++ b/release_notes.html
@@ -119,8 +119,8 @@
                        </ul>
 			<li>		OpenFAM APIs changes:
 		<ul>
-		<li><code>fam_create_region</code> API has been modified. A new region specific attribute called permissionLevel has been added to a structure called Fam_Region_Attributes.</li>
-		<li> A new API by name <code>fam_close</code>  has been added. This API reduces the reference count of the region within which the data item represented by the descriptor is allocated. OpenFAM internally uses this reference count for optimal usage of resources. This API helps to release unused resources back to the system. See <a href="fam_close.html">/fam_close</a> API for more details. </li>
+		<li><code>fam_create_region</code> API has been modified. A new region specific attribute called permissionLevel has been added to a structure called Fam_Region_Attributes.See <a href="fam_create_region.html">fam_create_region.html</a> API for more details.</li>
+		<li> A new API by name <code>fam_close</code>  has been added. This API reduces the reference count of the region within which the data item represented by the descriptor is allocated. OpenFAM internally uses this reference count for optimal usage of resources. This API helps to release unused resources back to the system. See <a href="fam_close.html">fam_close</a> API for more details. </li>
 		</ul>
 		</ul>
 		<h2>OpenFAM version 3.0 (release v3.0.0)</h2>
