--- a/v3.1/fam_close.html
+++ b/v3.1/fam_close.html
@@ -110,7 +110,7 @@
 	<p class="code">void fam_close(Fam_Descriptor *descriptor);</p>
 	<h2>Description</h2>
 	<p>This method reduces the reference count of the region within which the data item represented by the descriptor is allocated. 
-OpenFAM internally use this reference count for optimal usage of resources. 
+OpenFAM internally uses this reference count for optimal usage of resources. 
 Fam_close() helps to release unused resources back to the system.
 	</p>
 	<h2>Input Arguments</h2>
