--- a/v3.1/fam_destroy_region.html
+++ b/v3.1/fam_destroy_region.html
@@ -109,7 +109,7 @@
 	<h2>Synopsis</h2>
 	<p class="code">void fam_destroy_region(Fam_Region_Descriptor *descriptor);</p>
 	<h2>Description</h2>
-	<p>This destroys a region in FAM, and asynchronously frees space
+	<p>This destroys a region in FAM, and asynchronously frees the space
 		allocated to the region.</p>
 	<h2>Input Arguments</h2>
 	<table>
