--- a/v3.1/services.html
+++ b/v3.1/services.html
@@ -105,7 +105,7 @@
 		</nav>
 		<article>
 		<h1>OpenFAM 3.1 Services</h1>
-<p> OpenFAM version 2.0 introduced the concept of supporitng large pool of memory using multiple memory servers.
+<p> OpenFAM version 2.0 introduced the concept of supporting large pool of memory using multiple memory servers.
 OpenFAM version 3.1 contains significant design changes to increase scalability and improve performance.
 <ul>
 <li>The design supports a larger pool of memory by supporting multiple memory servers. This memory pool can be either volatile or persistent.</li>
